--- a/project/templates/basic.html
+++ b/project/templates/basic.html
@@ -72,7 +72,7 @@
 
           <li><a href="/contact" class="nav-link scrollto"><i class="bx bx-user"></i> <span>SignUp</span></a></li>
           <li><a href="/contact" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Login</span></a></li>
-          <li><a href="/contact" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Logout</span></a></li>
+          <li><a href="/auth/logout/" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Logout</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
