--- a/project/templates/signup.html
+++ b/project/templates/signup.html
@@ -1,5 +1,37 @@
 {% extends 'basic.html' %}
 {% block title %}Sign-Up{% endblock title %}
+{% block stylecss %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+{% endblock stylecss %}
 {% block body %}
 <h1>Sign-Up</h1>
+
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+
+            <h3 class="text-white bg-dark text-center p-3">Sign Up here</h3>
+            <div class="card p-2" >
+                <div class="form-group">
+                    <h5><span><i class="bx bx-envelope"></i> Email</span></h5>
+                    <input type="text" class="form-control">
+                </div>
+
+                <div class="form-group">
+                    <h5><span><i class="fas fa-key"></i> Password</span></h5>
+                    <input type="text" class="form-control">
+                </div>
+
+                <div class="form-group">
+                    <h5><span><i class="fas fa-lock"></i>Confirm Password</span></h5>
+                    <input type="text" class="form-control">
+                </div>
+                
+            </div>
+        </div>
+        <div class="col-md-4"></div>
+    </div>
+</div>
+
 {% endblock body %}
