--- a/project/templates/basic.html
+++ b/project/templates/basic.html
@@ -70,8 +70,8 @@
           <li><a href="/services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> {% endcomment %}
           <li><a href="/contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
 
-          <li><a href="/contact" class="nav-link scrollto"><i class="bx bx-user"></i> <span>SignUp</span></a></li>
-          <li><a href="/contact" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Login</span></a></li>
+          <li><a href="/auth/signup/" class="nav-link scrollto"><i class="bx bx-user"></i> <span>SignUp</span></a></li>
+          <li><a href="/auth/login/" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Login</span></a></li>
           <li><a href="/auth/logout/" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Logout</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
