--- a/project/templates/signup.html
+++ b/project/templates/signup.html
@@ -6,30 +6,42 @@
 {% block body %}
 <h1>Sign-Up</h1>
 
-<div class="container mt-4">
+<div class="container mt-4 p-2">
     <div class="row">
         <div class="col-md-4"></div>
-        <div class="col-md-4">
 
+        <div class="col-md-4">
+            <br>
+            <br>
+            <br>
+            <br>
             <h3 class="text-white bg-dark text-center p-3">Sign Up here</h3>
             <div class="card p-2" >
+
+                <form action="/auth/signup/" method="post">{% csrf_token %}
                 <div class="form-group">
                     <h5><span><i class="bx bx-envelope"></i> Email</span></h5>
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control mb-3 " name="email" required>
                 </div>
 
                 <div class="form-group">
                     <h5><span><i class="fas fa-key"></i> Password</span></h5>
-                    <input type="text" class="form-control">
+                    <input type="password" class="form-control mb-3" name="pass1" required>
                 </div>
 
                 <div class="form-group">
                     <h5><span><i class="fas fa-lock"></i>Confirm Password</span></h5>
-                    <input type="text" class="form-control">
+                    <input type="password" class="form-control mb-3" name="pass2" required>
                 </div>
                 
+                <button class="btn btn-dark btn-lg btn-block" type="submit">SignUp</button>
+                <p class="mt-3 text-center">Already User? <a href="/auth/login/">Login</a></p>
             </div>
+            
+
         </div>
+    </form>
+    
         <div class="col-md-4"></div>
     </div>
 </div>
