--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -8,3 +8,15 @@
     </div>
   </section>
 {% endblock hero %}
+{% block body %}
+
+{% for message in messages %}
+            <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
+                <strong>{{message}}</strong> 
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+{% endfor %}
+
+{% endblock body%}
