--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -19,17 +19,28 @@
             <br>
             <br>
             <h3 class="text-white bg-dark text-center p-3">Login</h3>
+
+            {% for message in messages %}
+            <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
+                <strong>{{message}}</strong> 
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+            {% endfor %}
+
             <div class="card p-2">
 
-                <form action="" method="post">{% csrf_token %}
+
+                <form action="/auth/login/" method="post">{% csrf_token %}
                     <div class="form-group">
                         <h5><span><i class="bx bx-envelope"></i> Email</span></h5>
-                        <input type="text" class="form-control mb-3 ">
+                        <input type="email" class="form-control mb-3 " name="email" required>
                     </div>
 
                     <div class="form-group">
                         <h5><span><i class="fas fa-key"></i> Password</span></h5>
-                        <input type="text" class="form-control mb-3">
+                        <input type="password" class="form-control mb-3" name="password" required>
                     </div>
 
                     <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
