--- a/project/templates/signup.html
+++ b/project/templates/signup.html
@@ -16,6 +16,15 @@
             <br>
             <br>
             <h3 class="text-white bg-dark text-center p-3">Sign Up here</h3>
+{% for message in messages %}
+            <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
+                <strong>{{message}}</strong> 
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+{% endfor %}
+
             <div class="card p-2" >
 
                 <form action="/auth/signup/" method="post">{% csrf_token %}
