--- a/project/templates/about.html
+++ b/project/templates/about.html
@@ -7,7 +7,7 @@
 
       <div class="section-title">
         <h2>About</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>Hi I am K Gokul Srinivas and I am in my 4th Year of B.Tech CSE at SRMIST Ramapuram Campus</p>
       </div>
 
       <div class="row">
@@ -23,18 +23,19 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>BirtYear:</strong> <span>2003</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 8015760203</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Chennai</span></li>
+
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Technology</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Stream:</strong> <span>Computer Science and Engineering</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>gokulsrinivask2020@gmail.com</span></li>
               </ul>
             </div>
           </div>
